crates/pixi_utils/src/snapshots/pixi_utils__conda_environment_file__tests__test_import_from_env_yaml.conda.yml.snap
---
source: crates/pixi_utils/src/conda_environment_file.rs
expression: "(parse_dependencies(env_info.dependencies().clone()).unwrap(),\nparse_channels(env_info.channels().clone()), env_info.name())"
---
(
    (
        [
            MatchSpec {
                name: Exact(
                    PackageName {
                        normalized: None,
                        source: "pip",
                    },
                ),
                version: Some(
                    StrictRange(
                        StartsWith,
                        StrictVersion(
                            Version {
                                version: [[0], [20]],
                                local: [],
                            },
                        ),
                    ),
                ),
                build: None,
                build_number: None,
                file_name: None,
                extras: None,
                channel: None,
                subdir: None,
                namespace: None,
                md5: None,
                sha256: None,
                url: None,
                license: None,
                condition: None,
                track_features: None,
            },
            MatchSpec {
                name: Exact(
                    PackageName {
                        normalized: None,
                        source: "python",
                    },
                ),
                version: Some(
                    StrictRange(
                        StartsWith,
                        StrictVersion(
                            Version {
                                version: [[0], [3]],
                                local: [],
                            },
                        ),
                    ),
                ),
                build: None,
                build_number: None,
                file_name: None,
                extras: None,
                channel: None,
                subdir: None,
                namespace: None,
                md5: None,
                sha256: None,
                url: None,
                license: None,
                condition: None,
                track_features: None,
            },
        ],
        [],
        [],
    ),
    [],
    None,
)
