crates/pixi_utils/src/snapshots/pixi_utils__conda_environment_file__tests__test_import_from_env_yaml.crnnft.yml.snap
---
source: crates/pixi_utils/src/conda_environment_file.rs
expression: "(parse_dependencies(env_info.dependencies().clone()).unwrap(),\nparse_channels(env_info.channels().clone()), env_info.name())"
---
(
    (
        [
            MatchSpec {
                name: Exact(
                    PackageName {
                        normalized: None,
                        source: "pip",
                    },
                ),
                version: Some(
                    StrictRange(
                        StartsWith,
                        StrictVersion(
                            Version {
                                version: [[0], [10], [0], [1]],
                                local: [],
                            },
                        ),
                    ),
                ),
                build: None,
                build_number: None,
                file_name: None,
                extras: None,
                flags: None,
                channel: None,
                subdir: None,
                namespace: None,
                md5: None,
                sha256: None,
                url: None,
                license: None,
                license_family: None,
                condition: None,
                track_features: None,
            },
            MatchSpec {
                name: Exact(
                    PackageName {
                        normalized: None,
                        source: "python",
                    },
                ),
                version: Some(
                    StrictRange(
                        StartsWith,
                        StrictVersion(
                            Version {
                                version: [[0], [3], [5], [5]],
                                local: [],
                            },
                        ),
                    ),
                ),
                build: None,
                build_number: None,
                file_name: None,
                extras: None,
                flags: None,
                channel: None,
                subdir: None,
                namespace: None,
                md5: None,
                sha256: None,
                url: None,
                license: None,
                license_family: None,
                condition: None,
                track_features: None,
            },
            MatchSpec {
                name: Exact(
                    PackageName {
                        normalized: None,
                        source: "setuptools",
                    },
                ),
                version: Some(
                    StrictRange(
                        StartsWith,
                        StrictVersion(
                            Version {
                                version: [[0], [39], [1], [0]],
                                local: [],
                            },
                        ),
                    ),
                ),
                build: None,
                build_number: None,
                file_name: None,
                extras: None,
                flags: None,
                channel: None,
                subdir: None,
                namespace: None,
                md5: None,
                sha256: None,
                url: None,
                license: None,
                license_family: None,
                condition: None,
                track_features: None,
            },
            MatchSpec {
                name: Exact(
                    PackageName {
                        normalized: None,
                        source: "wheel",
                    },
                ),
                version: Some(
                    StrictRange(
                        StartsWith,
                        StrictVersion(
                            Version {
                                version: [[0], [0], [31], [1]],
                                local: [],
                            },
                        ),
                    ),
                ),
                build: None,
                build_number: None,
                file_name: None,
                extras: None,
                flags: None,
                channel: None,
                subdir: None,
                namespace: None,
                md5: None,
                sha256: None,
                url: None,
                license: None,
                license_family: None,
                condition: None,
                track_features: None,
            },
        ],
        [
            Requirement {
                name: PackageName(
                    "tensorflow-gpu",
                ),
                extras: [],
                version_or_url: Some(
                    VersionSpecifier(
                        VersionSpecifiers(
                            [
                                VersionSpecifier {
                                    operator: Equal,
                                    version: "1.15.0",
                                },
                            ],
                        ),
                    ),
                ),
                marker: true,
                origin: None,
            },
            Requirement {
                name: PackageName(
                    "numpy",
                ),
                extras: [],
                version_or_url: None,
                marker: true,
                origin: None,
            },
            Requirement {
                name: PackageName(
                    "opencv-python",
                ),
                extras: [],
                version_or_url: None,
                marker: true,
                origin: None,
            },
            Requirement {
                name: PackageName(
                    "matplotlib",
                ),
                extras: [],
                version_or_url: None,
                marker: true,
                origin: None,
            },
            Requirement {
                name: PackageName(
                    "easydict",
                ),
                extras: [],
                version_or_url: None,
                marker: true,
                origin: None,
            },
        ],
        [],
    ),
    [
        Name(
            "main",
        ),
        Name(
            "r",
        ),
        Name(
            "msys2",
        ),
    ],
    Some(
        "crnntf",
    ),
)
