crates/pixi_utils/src/snapshots/pixi_utils__conda_environment_file__tests__test_import_from_env_yaml.let-plot.yml.snap
---
source: crates/pixi_utils/src/conda_environment_file.rs
expression: "(parse_dependencies(env_info.dependencies().clone()).unwrap(),\nparse_channels(env_info.channels().clone()), env_info.name())"
---
(
    (
        [
            MatchSpec {
                name: Exact(
                    PackageName {
                        normalized: None,
                        source: "python",
                    },
                ),
                version: Some(
                    StrictRange(
                        StartsWith,
                        StrictVersion(
                            Version {
                                version: [[0], [3], [8]],
                                local: [],
                            },
                        ),
                    ),
                ),
                build: None,
                build_number: None,
                file_name: None,
                extras: None,
                flags: None,
                channel: None,
                subdir: None,
                namespace: None,
                md5: None,
                sha256: None,
                url: None,
                license: None,
                license_family: None,
                condition: None,
                track_features: None,
            },
            MatchSpec {
                name: Exact(
                    PackageName {
                        normalized: None,
                        source: "numpy",
                    },
                ),
                version: Some(
                    Range(
                        GreaterEquals,
                        Version {
                            version: [[0], [1], [24], [2]],
                            local: [],
                        },
                    ),
                ),
                build: None,
                build_number: None,
                file_name: None,
                extras: None,
                flags: None,
                channel: None,
                subdir: None,
                namespace: None,
                md5: None,
                sha256: None,
                url: None,
                license: None,
                license_family: None,
                condition: None,
                track_features: None,
            },
            MatchSpec {
                name: Exact(
                    PackageName {
                        normalized: None,
                        source: "jupyter",
                    },
                ),
                version: Some(
                    StrictRange(
                        StartsWith,
                        StrictVersion(
                            Version {
                                version: [[0], [1], [0], [0]],
                                local: [],
                            },
                        ),
                    ),
                ),
                build: None,
                build_number: None,
                file_name: None,
                extras: None,
                flags: None,
                channel: None,
                subdir: None,
                namespace: None,
                md5: None,
                sha256: None,
                url: None,
                license: None,
                license_family: None,
                condition: None,
                track_features: None,
            },
            MatchSpec {
                name: Exact(
                    PackageName {
                        normalized: None,
                        source: "pandas",
                    },
                ),
                version: Some(
                    Range(
                        GreaterEquals,
                        Version {
                            version: [[0], [1], [5], [3]],
                            local: [],
                        },
                    ),
                ),
                build: None,
                build_number: None,
                file_name: None,
                extras: None,
                flags: None,
                channel: None,
                subdir: None,
                namespace: None,
                md5: None,
                sha256: None,
                url: None,
                license: None,
                license_family: None,
                condition: None,
                track_features: None,
            },
            MatchSpec {
                name: Exact(
                    PackageName {
                        normalized: None,
                        source: "geopandas",
                    },
                ),
                version: Some(
                    Range(
                        GreaterEquals,
                        Version {
                            version: [[0], [0], [12], [2]],
                            local: [],
                        },
                    ),
                ),
                build: None,
                build_number: None,
                file_name: None,
                extras: None,
                flags: None,
                channel: None,
                subdir: None,
                namespace: None,
                md5: None,
                sha256: None,
                url: None,
                license: None,
                license_family: None,
                condition: None,
                track_features: None,
            },
            MatchSpec {
                name: Exact(
                    PackageName {
                        normalized: None,
                        source: "shapely",
                    },
                ),
                version: Some(
                    Range(
                        GreaterEquals,
                        Version {
                            version: [[0], [2], [0], [0]],
                            local: [],
                        },
                    ),
                ),
                build: None,
                build_number: None,
                file_name: None,
                extras: None,
                flags: None,
                channel: None,
                subdir: None,
                namespace: None,
                md5: None,
                sha256: None,
                url: None,
                license: None,
                license_family: None,
                condition: None,
                track_features: None,
            },
            MatchSpec {
                name: Exact(
                    PackageName {
                        normalized: None,
                        source: "pytest",
                    },
                ),
                version: Some(
                    Range(
                        GreaterEquals,
                        Version {
                            version: [[0], [7], [2], [1]],
                            local: [],
                        },
                    ),
                ),
                build: None,
                build_number: None,
                file_name: None,
                extras: None,
                flags: None,
                channel: None,
                subdir: None,
                namespace: None,
                md5: None,
                sha256: None,
                url: None,
                license: None,
                license_family: None,
                condition: None,
                track_features: None,
            },
            MatchSpec {
                name: Exact(
                    PackageName {
                        normalized: None,
                        source: "pip",
                    },
                ),
                version: None,
                build: None,
                build_number: None,
                file_name: None,
                extras: None,
                flags: None,
                channel: None,
                subdir: None,
                namespace: None,
                md5: None,
                sha256: None,
                url: None,
                license: None,
                license_family: None,
                condition: None,
                track_features: None,
            },
        ],
        [
            Requirement {
                name: PackageName(
                    "pypng",
                ),
                extras: [],
                version_or_url: None,
                marker: true,
                origin: None,
            },
            Requirement {
                name: PackageName(
                    "palettable",
                ),
                extras: [],
                version_or_url: None,
                marker: true,
                origin: None,
            },
        ],
        [],
    ),
    [
        Name(
            "conda-forge",
        ),
        Name(
            "main",
        ),
        Name(
            "r",
        ),
        Name(
            "msys2",
        ),
    ],
    Some(
        "lets-plot-python-module",
    ),
)
